[gd_scene load_steps=2 format=3 uid="uid://ecjkbp7oo37n"]

[ext_resource type="Script" path="res://Screens/player.gd" id="1_g4t3e"]

[node name="Player" type="Node2D"]
script = ExtResource("1_g4t3e")

[node name="PlayerName" type="Label" parent="."]
offset_right = 250.0
offset_bottom = 65.0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 24
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerTotalPoints" type="Label" parent="."]
offset_top = 46.0
offset_right = 250.0
offset_bottom = 116.0
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerCurrentPoints" type="Label" parent="."]
offset_left = 39.0
offset_top = 94.0
offset_right = 212.0
offset_bottom = 178.0
theme_override_colors/font_color = Color(0.654902, 0.615686, 1, 1)
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
